<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bluescape</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_note">Create Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="deviceNotConnected">Device is not connected. Please check your Internet connectivity.        </string>
    <string name="errorCommunicatingWithServer">Device is not connected. Please check your Internet connectivity.</string>
    <string name="title_activity_workspace">WorkspaceActivity</string>
    <string name="staging">Staging</string>
    <string name="instance2">Instance2</string>
    <string name="production">Production</string>
    <string name="development">Development</string>
    <string name="acceptance">Acceptance</string>
    <string name="action_image">Add image</string>
    <string name="action_card">Draw Card</string>
    <string name="action_send_to_wall">Send to Wall</string>
    <string name="action_erase">Erase</string>
    <string name="action_stroke">Draw Stroke</string>
    <string name="action_line_size">Pick Line Size</string>
    <string name="action_back">Undo</string>
    <string name="action_take_pic">Camera</string>
    <string name="action_choose_pic">Gallery</string>
    <string name="title_activity_note_builder">Note Editor</string>
    <string name="title_activity_contact_us">Contact us</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


</resources>
