<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_image"
        android:title="@string/action_image"
        android:icon="@drawable/cam_b"
        android:orderInCategory="100"
        app:showAsAction="always">
        <!-- image submenu -->
        <menu>
            <item
                android:id="@+id/action_take_pic"
                android:title="@string/action_take_pic" />
            <item
                android:id="@+id/action_choose_pic"
                android:title="@string/action_choose_pic" />
        </menu>
    </item>
    <item
        android:id="@+id/action_card"
        android:title="@string/action_card"
        android:icon="@drawable/notecards_b"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history_back"
        android:title="@string/action_back"
        android:icon="@drawable/undo_b"
        android:orderInCategory="104"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_send_to_wall"
        android:title="@string/action_send_to_wall"
        android:icon="@drawable/to_wall_b"
        android:orderInCategory="104"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_stroke"
        android:title="@string/action_stroke"
        android:icon="@drawable/pen_b"
        android:orderInCategory="105"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_erase"
        android:title="@string/action_erase"
        android:icon="@drawable/erase_b"
        android:orderInCategory="106"
        app:showAsAction="always" />
</menu>
